# Latiao

./: .gitignore  .release-notes.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  latest.json  package-lock.json  package.json  start.sh  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
Latiao.app/Contents/: Info.plist
Latiao.app/Contents/Resources/: icon.icns
Latiao.app/Contents/Resources/sidecar/: local_llm.py  main.py  requirements.txt  ruff.toml
Latiao.app/Contents/Resources/sidecar/agents/: translator.txt
Latiao.app/Contents/Resources/sidecar/plugins/: list_dir.py  search_files.py  tavily_search.py
docs/: ARCHITECTURE.md  windows-setup.md
scripts/: build-win.sh  release.sh  setup-portable-python.sh
sidecar/: config.py  db.py  identity.py  latiao.spec  local_llm.py  main.py  memory.py  requirements.txt  tool_system.py
sidecar/agents/: code-reviewer.txt  code-reviewer_IDENTITY.txt  debugger.txt  debugger_AGENTS.txt  debugger_IDENTITY.txt  debugger_SOUL.txt  doc-generator.txt  doc-generator_IDENTITY.txt  latiao.txt  latiao_AGENTS.txt  latiao_IDENTITY.txt  latiao_SOUL.txt  latiao_USER.txt  translator_USER.txt
sidecar/plugins/: list_dir.py  mx_query.py  open_app.py  open_folder.py  read_file.py  run_cmd.py  search_files.py  tavily_search.py  write_file.py
sidecar/skills/: README.md  code-review.md  git-workflow.md  multi-search.md  python-fastapi.md  typescript-react.md
sidecar/tests/: test_memory.py  test_tokenize.py
src/: App.css  App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AgentView.tsx  ChannelsView.tsx  ChatView.tsx  CloudModelsTab.tsx  CronView.tsx  LocalModelsTab.tsx  LogsView.tsx  ModelsView.tsx  SettingsView.tsx  SkillsView.tsx  ToolCallBubble.tsx  ToolsView.tsx
src/hooks/: useCloudModels.ts  useCronJobs.ts  useSessions.ts  useSkills.ts
src/i18n/: I18nContext.tsx  index.ts  translations.ts
src/utils/: api.ts  crypto.ts
