[package]
name = "local-ai-os"
version = "0.1.0"
description = "Integrated Local AI Agent + Local Model"
authors = []
license = ""
repository = ""
edition = "2021"

[lints]
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(mobile)"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["default-tauri"]
default-tauri = ["tauri/default"]
