[package]
name = "local-ai-os"
version = "0.1.0"
description = "Integrated Local AI Agent + Local Model"
authors = []
license = ""
repository = ""
edition = "2021"

[lints]
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(mobile)"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"

[features]
default = ["default-tauri"]
default-tauri = ["tauri/default"]
devtools = ["tauri/devtools"]
